# OpenGL

OpenGL_course_template-master/: CMakeLists.txt
OpenGL_course_template-master/resources/: vertices.txt
OpenGL_course_template-master/resources/shaders/: fragment.glsl  vertex.glsl
OpenGL_course_template-master/src/: ShadersLoader.cpp  ShadersLoader.h  main.cpp
